<resources>
    <string name="app_name">PocketShop</string>
    <string name="app_description">Universal Woocommerce Android App </string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-4937593957421986~3239804062</string>
    <string name="ad_mob_banner_id" translatable="false">ca-app-pub-4937593957421986/6921418147</string>
    <string name="ad_mob_interstitial_id" translatable="false">ca-app-pub-4937593957421986/8959234608</string>
    <string name="lbl_grocery">Pocket</string>
    <string name="lbl_store">Shop</string>
    <string name="font_Bold" translatable="false">fonts/Jost-Bold.ttf</string>
    <string name="font_SemiBold" translatable="false">fonts/Jost-SemiBold.ttf</string>
    <string name="font_regular" translatable="false">fonts/Jost-Regular.ttf</string>
    <string name="font_Medium" translatable="false">fonts/Jost-Medium.ttf</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to-</string>
    <string name="lbl_tep_email">jonndeo@gmail.com</string>
    <string name="lbl_did_not_receive">Did not receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="invalid_product">Product Type not supported</string>
    <string name="lbl_my_order">My Order</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">WishList</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_newest_product">Newest Arrivals</string>
    <string name="lbl_rec_product">Suggested for You</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_selling">Best Selling Products</string>
    <string name="lbl_sale">Sale Products</string>
    <string name="lbl_sales">Sale</string>
    <string name="lbl_you_may_like">You may also like</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_4">4</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_price_detail">Price Details</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_offer">Available offer </string>
    <string name="lbl_shipping_charge">Shipping Charge </string>
    <string name="lbl_total_amount">Total Amount </string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_return_replace">Return &amp; Replace</string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Credit Card (Stripe)</string>
    <string name="lbl_net_banking">Card, NetBanking, Wallet and UPI\nPay by Razorpay</string>
    <string name="lbl_cash_on_delivery">Cash on delivery</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">My Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_remove_cart">Remove cart</string>
    <string name="lbl_logout_confirmation">Are you want to logout?</string>
    <string name="lbl_dialog_title">Confirmation</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no">NO</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="msg_confirmation">Are you sure you want to delete?</string>
    <string name="error_no_internet">Oops!! You Are Not Connected To Internet</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_pwd_digit_required">Maximum 6 digit Required</string>
    <string name="error_enter_valid_email">Enter Valid Email</string>
    <string name="error_password_not_matches">Password not matches</string>
    <string name="error_gps_not_enabled">GPS location is not enabled.</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_permission_required">Location Permission Required</string>
    <string name="error_address_type">Please Select Address Type</string>
    <string name="hint_email">Email</string>
    <string name="hint_company">Company</string>
    <string name="hint_add1">Address 1</string>
    <string name="hint_add2">Address 2</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_state">State</string>
    <string name="hint_address_type">Address Type</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="hint_pin_code">Pin code</string>
    <string name="hint_mobile_no">Phone number</string>
    <string name="text_todo">TODO</string>
    <string name="text_juliane_deerman">Juliane Deerman</string>
    <string name="text__02">00</string>
    <string name="text__10">00</string>
    <string name="text_499">$49</string>
    <string name="text_total_item_1">Total Item -</string>
    <string name="text_reward">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</string>
    <string name="title_account">My Account</string>
    <string name="title_reward">My Rewards</string>
    <string name="title_payment">Payments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="more">Read More</string>
    <string name="less">Read Less</string>
    <string name="order_summary">Order Summary</string>
    <string name="success">Successfully deleted</string>
    <string name="success_add">Successfully Added</string>
    <string name="send_to">Share with</string>
    <string name="lbl_save_profile">Save Profile</string>
    <string name="lbl_change_pwd">Change Password</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_new_password">New Password</string>
    <string name="lbl_change_now">Change Now</string>
    <string name="hint_enter_your_contact_number">Enter your contact number</string>
    <string name="hint_enter_your_email_id">Enter your email id</string>
    <string name="hint_description">Description</string>
    <string name="title_help">Help Center</string>
    <string name="title_setting">App Settings</string>
    <string name="title_faq">FAQ</string>
    <string name="lbl_account_deactivate">Account Deactivate</string>
    <string name="lbl_return_items">Return items</string>
    <string name="lbl_replace_items">Replace items</string>
    <string name="lbl_quick_pay">Quick Pay</string>
    <string name="lbl_call_request">Call Request</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_send_mail">Send mail</string>
    <string name="lbl_email_to_woobox">Email to woobox</string>
    <string name="lbl_from">From</string>
    <string name="lbl_description">Description</string>
    <string name="hint_description_here">Description here</string>
    <string name="lbl_successfully">Successfully Done</string>
    <string name="error_enter_valid_contact">Enter valid contact number</string>
    <string name="title_contact_us">Contact us</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="text_iqonicdesign_gmail_com">iqonicdesign@gmail.com</string>
    <string name="days">Days</string>
    <string name="hours">hr</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="title_offer">Offers</string>
    <string name="text_sunday_special">Sunday Special</string>
    <string name="lbl_view_all">View all</string>
    <string name="text_colon">:</string>
    <string name="lbl_no_tracking_available">No Tracking Available</string>
    <string name="hint_enter_old_password">Old Password</string>
    <string name="msg_success_pwd">Successfully password changed</string>
    <string name="contact_phone">+234 543 543 1676</string>
    <string name="msg_success_card">Card Added Successfully</string>
    <string name="desc_slider">slider</string>
    <string name="hint_no_products">No Data Found</string>
    <string name="reference_email">Johnduoe@gmail.com</string>
    <string name="lbl_loading">Loading</string>
    <string name="hint_review">Review</string>
    <string name="lbl_0">$0</string>
    <string name="err_empty_cart">No items in your cart</string>
    <string name="lbl_shop_now">Shop Now</string>
    <string name="lbl_select_address_type">Select Address Type</string>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="lbl_new_pwd">New Password</string>
    <string name="lbl_oder_placed_successfully">Order Placed Successfully</string>
    <string name="lbl_transaction_id">Transaction ID</string>
    <string name="lbl_transaction_date">Transaction Date</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Username">Username</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_shop_for_happiness">Shop for happiness</string>
    <string name="lbl_already_have_account">Already have an account</string>
    <string name="lbl_sign_in_link">Sign in</string>
    <string name="lbl_about">About Us</string>
    <string name="lbl_no_internet">No Internet Connection</string>
    <string name="msg_internet">There is something wrong with a proxy server or the address is incorrect</string>
    <string name="lbl_tap_to_retry">Tap to Retry</string>
</resources>