<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rlMain"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_nointernet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_no_internet"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_size_xxlarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_control"
            android:gravity="center"
            android:text="@string/msg_internet"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/tvBackRetry"
            style="@style/MaterialButton"
            android:layout_marginTop="@dimen/_30sdp"
            android:elevation="@dimen/spacing_standard_new"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/lbl_tap_to_retry"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textAppearance="@style/FontSemiBold" />

    </LinearLayout>

</RelativeLayout>